2006-10-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc: Developer Thomas Lemaire retired.

2006-10-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/converters.cpp, itpp/base/logexpfunc.h,
	itpp/base/matfunc.h, itpp/base/specmat.cpp, itpp/comm/channel.cpp,
	itpp/comm/modulator.cpp, itpp/comm/modulator.h,
	itpp/comm/modulator_nd.cpp, itpp/signal/sigfun.cpp,
	itpp/signal/transforms.cpp, itpp/srccode/vq.h,
	tests/convcode_test.cpp: Function `needed_bits()' marked as
	deprecated, because its name was a bit misleading (see bug
	[1480535]). Instead of it the following two functions were added:
	`int2bits()' and `levels2bits()'. The first one returns the number
	of beed required for representing an unsigned integer, e.g.
	"int2bits(0) = 1", "int2bits(2) = 2". The latter one returns the
	number of bits to code a certain, positive number of values
	(levels). For example: "levels2bits(1) = 1", "levels2bits(2) = 1".

2006-10-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc, doc/local/installation.doc,
	INSTALL: Documentation improvements and author list update.

	* configure.ac: Building of the static library disabled for
	systems that support shared libraries.

	* configure.ac, itpp-config.in, itpp.pc.in: Cleaned up the
	detected library flags necessary to link with static libraries.

2006-10-17  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/tutorial/src/mimoconv.cpp: Fixed minor bug in tutorial

2006-10-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* ChangeLog, ChangeLog-2005, NEWS, NEWS-3.9, Makefile.am:
	ChangeLog and NEWS files split according to dates and versions.

==============================================================================

2006-10-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.6 released (SVN tag: release-3-10-6)

	* NEWS: Updated to reflect recent changes (merged rev. 679:681
	from itpp-3-10 branch).
