@@ -1,6 +1,6 @@
-<div style="width: 100%; height: 31px; background-color: #eeeeff; border: 1px solid #b0b0b0; text-align: left; margin: 2px; margin-top: 12px; padding: 2px;">
-  <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=37044&amp;type=1" align="right" alt="SourceForge Logo" border="0" height="31" width="88"></a>
-  <p style="margin-left: 10px; font-weight: bold; font-size: 9pt;"> Generated on $datetime for $projectname by <a href="http://www.doxygen.org/index.html">Doxygen</a> $doxygenversion</p>
+<div style="clear: both; width: 100%; height: 31px; background-color: #ffff00; border: 1px solid #b0b0b0; margin: 5px 5px 5px 0; padding: 2px;">
+  <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=37044&amp;type=1" alt="SourceForge Logo" style="float: right; border: 0;"></a>
+  <p style="padding-left: 10px; font-size: 85%;">Generated on $datetime for $projectname by <a href="http://www.doxygen.org/index.html">Doxygen</a> $doxygenversion</p>
 </div>
 </body>
 </html>
